--- a/portal-web/test/com/liferay/portalweb/portal/controlpanel/webcontent/wcstructure/addwcstructure/AddWCStructure2Test.html
+++ b/portal-web/test/com/liferay/portalweb/portal/controlpanel/webcontent/wcstructure/addwcstructure/AddWCStructure2Test.html
@@ -1,12 +1,12 @@
 <html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-<title>AddStructure1Test</title>
+<title>AddWCStructure2Test</title>
 </head>
 <body>
 <table cellpadding="1" cellspacing="1" border="1">
 <thead>
-<tr><td rowspan="1" colspan="3">AddStructure1Test</td></tr>
+<tr><td rowspan="1" colspan="3">AddWCStructure2Test</td></tr>
 </thead><tbody>
 <tr>
 	<td>open</td>
@@ -49,9 +49,49 @@
 	<td>Web Content</td>
 </tr>
 <tr>
-	<td>clickAtAndWait</td>
-	<td>link=Structures</td>
+	<td>assertText</td>
+	<td>//span[@title='Manage']/ul/li/strong/a/span</td>
+	<td>Manage</td>
+</tr>
+<tr>
+	<td>clickAt</td>
+	<td>//span[@title='Manage']/ul/li/strong/a/span</td>
+	<td>Manage</td>
+</tr>
+<tr>
+	<td>waitForVisible</td>
+	<td>//div[@class='lfr-component lfr-menu-list']/ul/li/a[contains(.,'Structures')]</td>
 	<td>Structures</td>
+</tr>
+<tr>
+	<td>assertText</td>
+	<td>//div[@class='lfr-component lfr-menu-list']/ul/li/a[contains(.,'Structures')]</td>
+	<td>Structures</td>
+</tr>
+<tr>
+	<td>clickAt</td>
+	<td>//div[@class='lfr-component lfr-menu-list']/ul/li/a[contains(.,'Structures')]</td>
+	<td>Structures</td>
+</tr>
+<tr>
+	<td>waitForVisible</td>
+	<td>//iframe[@id='_15_openStructuresView']</td>
+	<td>Structures</td>
+</tr>
+<tr>
+	<td>selectFrame</td>
+	<td>//iframe[@id='_15_openStructuresView']</td>
+	<td>Structures</td>
+</tr>
+<tr>
+	<td>pause</td>
+	<td>5000</td>
+	<td></td>
+</tr>
+<tr>
+	<td>waitForVisible</td>
+	<td>//input[@value='Add Structure']</td>
+	<td>Add Structure</td>
 </tr>
 <tr>
 	<td>clickAtAndWait</td>
@@ -61,12 +101,12 @@
 <tr>
 	<td>type</td>
 	<td>//input[@id='_15_name_en_US']</td>
-	<td>WC Structure1 Name</td>
+	<td>WC Structure2 Name</td>
 </tr>
 <tr>
 	<td>type</td>
 	<td>//textarea[@id='_15_description_en_US']</td>
-	<td>WC Structure1 Description</td>
+	<td>WC Structure2 Description</td>
 </tr>
 <tr>
 	<td>clickAtAndWait</td>
@@ -220,18 +260,23 @@
 </tr>
 <tr>
 	<td>assertVisible</td>
-	<td>//td[2]/a</td>
+	<td>//tr[4]/td[2]/a</td>
 	<td>Structure ID</td>
 </tr>
 <tr>
 	<td>assertText</td>
-	<td>//td[3]/a</td>
-	<td>WC Structure1 Name</td>
+	<td>//tr[4]/td[3]/a</td>
+	<td>WC Structure2 Name</td>
 </tr>
 <tr>
 	<td>assertText</td>
-	<td>//td[4]/a</td>
-	<td>WC Structure1 Description</td>
+	<td>//tr[4]/td[4]/a</td>
+	<td>WC Structure2 Description</td>
+</tr>
+<tr>
+	<td>selectFrame</td>
+	<td>relative=top</td>
+	<td>top</td>
 </tr>
 </tbody></table>
 </body>
