--- a/portal-web/test/com/liferay/portalweb/portal/controlpanel/webcontent/wcstructure/addwcstructure/TearDownWCStructureTest.html
+++ b/portal-web/test/com/liferay/portalweb/portal/controlpanel/webcontent/wcstructure/addwcstructure/TearDownWCStructureTest.html
@@ -79,6 +79,11 @@
 	<td>Add Structure</td>
 </tr>
 <tr>
+	<td>pause</td>
+	<td>5000</td>
+	<td></td>
+</tr>
+<tr>
 	<td>storeElementPresent</td>
 	<td>//input[@name='_15_rowIds']</td>
 	<td>structurePresent</td>
