--- a/portal-web/test/com/liferay/portalweb/portal/controlpanel/webcontent/wcstructure/addwcstructures/ViewWCStructure1Test.html
+++ b/portal-web/test/com/liferay/portalweb/portal/controlpanel/webcontent/wcstructure/addwcstructures/ViewWCStructure1Test.html
@@ -1,17 +1,27 @@
 <html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-<title>ViewStructure3Test</title>
+<title>ViewWCStructure1Test</title>
 </head>
 <body>
 <table cellpadding="1" cellspacing="1" border="1">
 <thead>
-<tr><td rowspan="1" colspan="3">ViewStructure3Test</td></tr>
+<tr><td rowspan="1" colspan="3">ViewWCStructure1Test</td></tr>
 </thead><tbody>
 <tr>
 	<td>open</td>
 	<td>/web/guest/home/</td>
 	<td></td>
+</tr>
+<tr>
+	<td>clickAt</td>
+	<td>//div[@id='dockbar']</td>
+	<td>Dockbar</td>
+</tr>
+<tr>
+	<td>waitForElementPresent</td>
+	<td>//script[contains(@src,'/aui/aui-editable/aui-editable-min.js')]</td>
+	<td>AUI Editable Min</td>
 </tr>
 <tr>
 	<td>assertText</td>
@@ -39,36 +49,6 @@
 	<td>Web Content</td>
 </tr>
 <tr>
-	<td>clickAtAndWait</td>
-	<td>link=Structures</td>
-	<td>Structures</td>
-</tr>
-<tr>
-	<td>storeText</td>
-	<td>//tr[5]/td[2]/a</td>
-	<td>structureID</td>
-</tr>
-<tr>
-	<td>assertText</td>
-	<td>//tr[5]/td[2]/a</td>
-	<td>${structureID}</td>
-</tr>
-<tr>
-	<td>assertText</td>
-	<td>//tr[5]/td[3]/a</td>
-	<td>WC Structure3 Name</td>
-</tr>
-<tr>
-	<td>assertText</td>
-	<td>//tr[5]/td[4]/a</td>
-	<td>WC Structure3 Description</td>
-</tr>
-<tr>
-	<td>clickAtAndWait</td>
-	<td>//tr[5]/td[3]/a</td>
-	<td>WC Structure3Name</td>
-</tr>
-<tr>
 	<td>assertText</td>
 	<td>//span[@class='portlet-title-text']</td>
 	<td>Web Content</td>
@@ -80,8 +60,78 @@
 </tr>
 <tr>
 	<td>assertText</td>
+	<td>//span[@title='Manage']/ul/li/strong/a/span</td>
+	<td>Manage</td>
+</tr>
+<tr>
+	<td>clickAt</td>
+	<td>//span[@title='Manage']/ul/li/strong/a/span</td>
+	<td>Manage</td>
+</tr>
+<tr>
+	<td>waitForVisible</td>
+	<td>//div[@class='lfr-component lfr-menu-list']/ul/li/a[contains(.,'Structures')]</td>
+	<td>Structures</td>
+</tr>
+<tr>
+	<td>assertText</td>
+	<td>//div[@class='lfr-component lfr-menu-list']/ul/li/a[contains(.,'Structures')]</td>
+	<td>Structures</td>
+</tr>
+<tr>
+	<td>clickAt</td>
+	<td>//div[@class='lfr-component lfr-menu-list']/ul/li/a[contains(.,'Structures')]</td>
+	<td>Structures</td>
+</tr>
+<tr>
+	<td>waitForVisible</td>
+	<td>//iframe[@id='_15_openStructuresView']</td>
+	<td>Structures</td>
+</tr>
+<tr>
+	<td>selectFrame</td>
+	<td>//iframe[@id='_15_openStructuresView']</td>
+	<td>Structures</td>
+</tr>
+<tr>
+	<td>pause</td>
+	<td>5000</td>
+	<td></td>
+</tr>
+<tr>
+	<td>waitForVisible</td>
+	<td>//input[@value='Add Structure']</td>
+	<td>Add Structure</td>
+</tr>
+<tr>
+	<td>storeText</td>
+	<td>//td[2]/a</td>
+	<td>structureID</td>
+</tr>
+<tr>
+	<td>assertText</td>
+	<td>//td[2]/a</td>
+	<td>${structureID}</td>
+</tr>
+<tr>
+	<td>assertText</td>
+	<td>//td[3]/a</td>
+	<td>WC Structure1 Name</td>
+</tr>
+<tr>
+	<td>assertText</td>
+	<td>//td[4]/a</td>
+	<td>WC Structure1 Description</td>
+</tr>
+<tr>
+	<td>clickAtAndWait</td>
+	<td>//td[3]/a</td>
+	<td>WC Structure1Name</td>
+</tr>
+<tr>
+	<td>assertText</td>
 	<td>//h1[@class='header-title']/span</td>
-	<td>WC Structure3 Name</td>
+	<td>WC Structure1 Name</td>
 </tr>
 <tr>
 	<td>assertPartialText</td>
@@ -91,7 +141,7 @@
 <tr>
 	<td>assertValue</td>
 	<td>//input[@id='_15_name_en_US']</td>
-	<td>WC Structure3 Name</td>
+	<td>WC Structure1 Name</td>
 </tr>
 <tr>
 	<td>assertText</td>
@@ -101,7 +151,7 @@
 <tr>
 	<td>assertValue</td>
 	<td>//textarea[@id='_15_description_en_US']</td>
-	<td>WC Structure3 Description</td>
+	<td>WC Structure1 Description</td>
 </tr>
 <tr>
 	<td>assertText</td>
@@ -277,6 +327,11 @@
 	<td>assertVisible</td>
 	<td>//input[@value='Cancel']</td>
 	<td>Cancel</td>
+</tr>
+<tr>
+	<td>selectFrame</td>
+	<td>relative=top</td>
+	<td>top</td>
 </tr>
 </tbody></table>
 </body>
