--- a/portal-web/test/com/liferay/portalweb/portal/controlpanel/webcontent/wcstructure/addwcstructure/AddWCStructure2Test.html
+++ b/portal-web/test/com/liferay/portalweb/portal/controlpanel/webcontent/wcstructure/addwcstructure/AddWCStructure2Test.html
@@ -84,9 +84,9 @@
 	<td>Structures</td>
 </tr>
 <tr>
-	<td>pause</td>
-	<td>5000</td>
-	<td></td>
+	<td>waitForElementPresent</td>
+	<td>//script[contains(@src,'/liferay/store.js')]</td>
+	<td>Store</td>
 </tr>
 <tr>
 	<td>waitForVisible</td>
@@ -185,8 +185,8 @@
 </tr>
 <tr>
 	<td>clickAtAndWait</td>
-	<td>xpath=(//img[@alt='Add'])[4]</td>
-	<td></td>
+	<td>xPath=(//img[@alt='Add'])[4]</td>
+	<td>Add</td>
 </tr>
 <tr>
 	<td>select</td>
@@ -200,8 +200,8 @@
 </tr>
 <tr>
 	<td>clickAtAndWait</td>
-	<td>xpath=(//img[@alt='Add'])[4]</td>
-	<td></td>
+	<td>xPath=(//img[@alt='Add'])[4]</td>
+	<td>Add</td>
 </tr>
 <tr>
 	<td>select</td>
@@ -215,8 +215,8 @@
 </tr>
 <tr>
 	<td>clickAtAndWait</td>
-	<td>xpath=(//img[@alt='Add'])[4]</td>
-	<td></td>
+	<td>xPath=(//img[@alt='Add'])[4]</td>
+	<td>Add</td>
 </tr>
 <tr>
 	<td>select</td>
