--- a/portal-web/test/com/liferay/portalweb/portal/controlpanel/webcontent/wcstructure/addwcstructure/TearDownWCStructureTest.html
+++ b/portal-web/test/com/liferay/portalweb/portal/controlpanel/webcontent/wcstructure/addwcstructure/TearDownWCStructureTest.html
@@ -14,6 +14,16 @@
 	<td></td>
 </tr>
 <tr>
+	<td>clickAt</td>
+	<td>//div[@id='dockbar']</td>
+	<td>Dockbar</td>
+</tr>
+<tr>
+	<td>waitForElementPresent</td>
+	<td>//script[contains(@src,'/aui/aui-editable/aui-editable-min.js')]</td>
+	<td>AUI Editable Min</td>
+</tr>
+<tr>
 	<td>assertText</td>
 	<td>//li[@id='_145_mySites']/a/span</td>
 	<td>Go to</td>
@@ -79,9 +89,9 @@
 	<td>Add Structure</td>
 </tr>
 <tr>
-	<td>pause</td>
-	<td>5000</td>
-	<td></td>
+	<td>waitForElementPresent</td>
+	<td>//script[contains(@src,'/liferay/store.js')]</td>
+	<td>Store</td>
 </tr>
 <tr>
 	<td>storeElementPresent</td>
@@ -119,9 +129,19 @@
 	<td></td>
 </tr>
 <tr>
+	<td>assertText</td>
+	<td>//div[@class='portlet-msg-success']</td>
+	<td>Your request completed successfully.</td>
+</tr>
+<tr>
 	<td>label</td>
 	<td>StructureNotPresent</td>
 	<td></td>
+</tr>
+<tr>
+	<td>assertText</td>
+	<td>//div[@class='portlet-msg-info']</td>
+	<td>No structures were found.</td>
 </tr>
 <tr>
 	<td>selectFrame</td>
