LPS-36390 patch JodConverter.jar

--- a/lib/versions.html
+++ b/lib/versions.html
@@ -1220,7 +1220,9 @@
 <tr>
 <td nowrap>lib/portal/jodconverter.jar</td><td nowrap>2.2.2</td><td nowrap><a href="http://jodconverter.sourceforge.net">JODConverter</a></td><td nowrap><a href="http://www.gnu.org/licenses/lgpl-2.1.html">LGPL 2.1</a>
 <br>
-</td><td></td>
+</td><td>
+			This includes a public patch from LPS-36390.
+		</td>
 </tr>
 	
 <tr>
