LPS-105380 Auto SF

--- a/modules/apps/commerce/commerce-frontend-js/dev/public/side-panel/email.html
+++ b/modules/apps/commerce/commerce-frontend-js/dev/public/side-panel/email.html
@@ -16,18 +16,18 @@
 	</head>
 
 	<body class="bg-light p-3">
-			<div class="card-header d-flex align-items-center justify-content-between">
+			<div class="align-items-center card-header d-flex justify-content-between">
 				Email subject
 
 				<button class="btn btn-unstyled btn-monospaced">+</button>
 			</div>
 
-			<div class="card-body bg-white">
+			<div class="bg-white card-body">
 				<div class="row">
 					<div class="col">
 						<div class="row">
 							<div class="col-auto">
-								<span class="sticker sticker-user-icon sticker-rounded sticker-xl">
+								<span class="sticker sticker-rounded sticker-user-icon sticker-xl">
 									<span class="sticker-overlay">
 										<div class="sticker-overlay">
 											<img class="sticker-img" src="https://via.placeholder.com/150" />
