--- a/modules/apps/fragment/fragment-collection-contributor/fragment-collection-contributor-cookie-banner/src/main/resources/com/liferay/fragment/collection/contributor/cookie/banner/dependencies/cookie-banner-simple/index.html
+++ b/modules/apps/fragment/fragment-collection-contributor/fragment-collection-contributor-cookie-banner/src/main/resources/com/liferay/fragment/collection/contributor/cookie/banner/dependencies/cookie-banner-simple/index.html
@@ -1,5 +1,5 @@
 <div class="cookie-banner ${configuration.fixedStyle}">
-	<div class="container col-12 col-md-8 col-xl-6 mx-auto text-center py-4">
+	<div class="col-12 col-md-8 col-xl-6 container mx-auto py-4 text-center">
 		<div>
 			<p class="mb-3" data-lfr-editable-id="01-text" data-lfr-editable-type="rich-text">
 				This website uses cookies to ensure you get the best experience. <a href="https://www.cookiesandyou.com/">Learn More</a>.
