--- a/modules/apps/fragment/fragment-collection-contributor/fragment-collection-contributor-featured-content/src/main/resources/com/liferay/fragment/collection/contributor/featured/content/dependencies/banner-slider/index.html
+++ b/modules/apps/fragment/fragment-collection-contributor/fragment-collection-contributor-featured-content/src/main/resources/com/liferay/fragment/collection/contributor/featured/content/dependencies/banner-slider/index.html
@@ -25,10 +25,10 @@
 		</ol>
 
 		<div class="carousel-inner text-break" id="${fragmentEntryLinkNamespace}-carouselInner" role="group">
-			<div class="carousel-item active">
+			<div class="active carousel-item">
 				<img alt="First Responsive Image" class="w-100" data-lfr-editable-id="01-01-image" data-lfr-editable-type="image" src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAABAAAAAJCAYAAAA7KqwyAAAACXBIWXMAAAsTAAALEwEAmpwYAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8YQUAAAAkSURBVHgB7cxBEQAACAIwtH8Pzw52kxD8OBZgNXsPQUOUwCIgAz0DHTyygaAAAAAASUVORK5CYII=" />
 
-				<div class="carousel-caption d-none d-md-block">
+				<div class="carousel-caption d-md-block d-none">
 					<div class="container">
 						<div class="row">
 							<div class="col-12 col-md-8 col-xl-6 mx-auto text-center">
@@ -56,7 +56,7 @@
 			<div class="carousel-item">
 				<img alt="Second Responsive Image" class="w-100" data-lfr-editable-id="02-01-image" data-lfr-editable-type="image" src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAABAAAAAJCAYAAAA7KqwyAAAACXBIWXMAAAsTAAALEwEAmpwYAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8YQUAAAAkSURBVHgB7cxBEQAACAIwtH8Pzw52kxD8OBZgNXsPQUOUwCIgAz0DHTyygaAAAAAASUVORK5CYII=" />
 
-				<div class="carousel-caption d-none d-md-block">
+				<div class="carousel-caption d-md-block d-none">
 					<div class="container">
 						<div class="row">
 							<div class="col-12 col-md-8 col-xl-6 mx-auto text-center">
@@ -84,7 +84,7 @@
 			<div class="carousel-item">
 				<img alt="Third Responsive Image" class="w-100" data-lfr-editable-id="03-01-image" data-lfr-editable-type="image" src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAABAAAAAJCAYAAAA7KqwyAAAACXBIWXMAAAsTAAALEwEAmpwYAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8YQUAAAAkSURBVHgB7cxBEQAACAIwtH8Pzw52kxD8OBZgNXsPQUOUwCIgAz0DHTyygaAAAAAASUVORK5CYII=" />
 
-				<div class="carousel-caption d-none d-md-block">
+				<div class="carousel-caption d-md-block d-none">
 					<div class="container">
 						<div class="row">
 							<div class="col-12 col-md-8 col-xl-6 mx-auto text-center">
