--- a/modules/apps/fragment/fragment-collection-contributor/fragment-collection-contributor-footers/src/main/resources/com/liferay/fragment/collection/contributor/footers/dependencies/footer-nav-light/index.html
+++ b/modules/apps/fragment/fragment-collection-contributor/fragment-collection-contributor-footers/src/main/resources/com/liferay/fragment/collection/contributor/footers/dependencies/footer-nav-light/index.html
@@ -1,20 +1,20 @@
 <footer
-	class="section-footer navbar navbar-light bg-white border-top border-light pt-6 pb-8"
+	class="bg-white border-light border-top navbar navbar-light pb-8 pt-6 section-footer"
 >
-	<div class="container-fluid container-fluid-max-xl justify-content-between flex-column flex-lg-row text-break">
-		<div class="d-flex align-items-center">
-			<img alt="Logo Image" class="section-footer-logo mr-3" data-lfr-editable-id="01-logo" data-lfr-editable-type="image" src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAACXBIWXMAAAsTAAALEwEAmpwYAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8YQUAAAAnSURBVHgB7cwxEQAACAOxgn8fHB7wBiK6MHwEJKpnZUiZCAgIvgQHmksDKxJ1SeoAAAAASUVORK5CYII=" />
+	<div class="container-fluid container-fluid-max-xl flex-column flex-lg-row justify-content-between text-break">
+		<div class="align-items-center d-flex">
+			<img alt="Logo Image" class="mr-3 section-footer-logo" data-lfr-editable-id="01-logo" data-lfr-editable-type="image" src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAACXBIWXMAAAsTAAALEwEAmpwYAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8YQUAAAAnSURBVHgB7cwxEQAACAOxgn8fHB7wBiK6MHwEJKpnZUiZCAgIvgQHmksDKxJ1SeoAAAAASUVORK5CYII=" />
 
 			<div data-lfr-editable-id="02-copy" data-lfr-editable-type="text">
 				© 2019 Sitebrand
 			</div>
 		</div>
 
-		<div class="d-flex align-items-center flex-column flex-lg-row mt-3 mt-lg-0">
+		<div class="align-items-center d-flex flex-column flex-lg-row mt-3 mt-lg-0">
 			<lfr-widget-nav></lfr-widget-nav>
 
-			<span class="mt-4 mt-lg-0 ml-lg-3">
-				<a class="btn btn-sm btn-outline-dark" data-lfr-editable-id="03-link" data-lfr-editable-type="link" href="#" id="fragment-${fragmentEntryLinkNamespace}-03-link">
+			<span class="ml-lg-3 mt-4 mt-lg-0">
+				<a class="btn btn-outline-dark btn-sm" data-lfr-editable-id="03-link" data-lfr-editable-type="link" href="#" id="fragment-${fragmentEntryLinkNamespace}-03-link">
 					Sign In
 				</a>
 			</span>
