--- a/modules/apps/fragment/fragment-collection-contributor/fragment-collection-contributor-navigation-bars/src/main/resources/com/liferay/fragment/collection/contributor/navigation/bars/dependencies/header-dark/index.html
+++ b/modules/apps/fragment/fragment-collection-contributor/fragment-collection-contributor-navigation-bars/src/main/resources/com/liferay/fragment/collection/contributor/navigation/bars/dependencies/header-dark/index.html
@@ -1,12 +1,12 @@
-<header class="section-header navbar navbar-dark bg-dark text-white py-4">
-	<div class="container justify-content-between flex-column flex-lg-row text-break">
+<header class="bg-dark navbar navbar-dark py-4 section-header text-white">
+	<div class="container flex-column flex-lg-row justify-content-between text-break">
 		<img alt="Logo Image" class="section-header-logo" data-lfr-editable-id="01-logo" data-lfr-editable-type="image" src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAACXBIWXMAAAsTAAALEwEAmpwYAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8YQUAAAAnSURBVHgB7cwxEQAACAOxgn8fHB7wBiK6MHwEJKpnZUiZCAgIvgQHmksDKxJ1SeoAAAAASUVORK5CYII=" />
 
-		<div class="d-flex align-items-center flex-column flex-lg-row mt-3 mt-lg-0">
+		<div class="align-items-center d-flex flex-column flex-lg-row mt-3 mt-lg-0">
 			<lfr-widget-nav></lfr-widget-nav>
 
-			<span class="mt-4 mt-lg-0 ml-lg-3">
-				<a class="btn btn-sm btn-outline-light" data-lfr-editable-id="03-link" data-lfr-editable-type="link" href="#" id="fragment-${fragmentEntryLinkNamespace}-03-link">
+			<span class="ml-lg-3 mt-4 mt-lg-0">
+				<a class="btn btn-outline-light btn-sm" data-lfr-editable-id="03-link" data-lfr-editable-type="link" href="#" id="fragment-${fragmentEntryLinkNamespace}-03-link">
 					Sign In
 				</a>
 			</span>
